fixed search button on safari for iOS

--- a/css/style.scss
+++ b/css/style.scss
@@ -133,6 +133,7 @@ header {
             margin: 0;
             padding: $base $base*2;
             text-transform: uppercase;
+            -webkit-appearance: none;
         }
     }
     a {
